@@ -1,5 +1,9 @@
 3.0.4
-   * Support system wide themes
+   * Support system wide themes (bug 648751)
+   * Fix duplicate themes (bug 649687)
+   * A themeing specification for shell themes has been developed and agreed upon
+     by a number of theme authors. If installing a theme matching this specification
+     show the appropriate name
 
 3.0.3
    * Autostart nautilus at login if it is configured to show
